<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:paddingRight="16dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/selectorOperation"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioAreaCuadrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_cuadrado" />

            <RadioButton
                android:id="@+id/radioAreaTriangulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_triangulo" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/base"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/baseUno"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/altura"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/alturaUno"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#757575" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/valorLadoUno"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/ladoUno"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|number"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/valorLadoDos"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/ladoDos"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#757575" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text_Resultado"
            android:textAlignment="center"
            android:textColor="@color/material_dynamic_primary0"
            android:textSize="80sp" />

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>


</LinearLayout>
